<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.popularmoviesstage2.preferences.FavouriteDetails">

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saved_floating_button"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        />
    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/backgroundColor"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:id="@+id/saved_poster_view"
                android:contentDescription="@string/movie_poster_desc"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/saved_movie_title"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="#fff"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="16dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_rating"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="16dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/saved_user_rating"
                    android:textSize="20sp"
                    android:textColor="#fff"
                    android:layout_marginStart="16dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/release_date_label"
                    android:textColor="#fff"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/saved_release_date"
                    android:textColor="#fff"
                    android:layout_marginStart="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:textSize="16sp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/plot_synopsis_label"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:fontFamily="sans-serif-condensed" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00c853"
                android:layout_marginTop="4dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/saved_movie_plot_synopsis"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"
                android:textColor="#fff"
                android:textStyle="italic"/>

        </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
